@startuml LoGAnalyser_Class_Diagram

title LoGAnalyser - Class Diagram

skinparam backgroundColor #FEFEFE
skinparam classBackgroundColor #E3F2FD
skinparam classBorderColor #2196F3

package "Configuration" {
    class configSettings {
        - feature_control_config: dict
        - validation_pattern_config: dict
        - trace_pattern_config: dict
        - downloadPipe_pattern_config: dict
        + getFeatureControlConfig(): dict
        + getValidationPatternConfig(): dict
        + getTracePatternConfig(): dict
        + getdownloadPipePatternConfig(): dict
        + createGetLogsFolder(): void
    }
}

package "Global State" {
    class global_var {
        + g_feature_control_config: dict
        + g_validation_pattern_config: dict
        + g_trace_pattern_config: dict
        + g_downloadPipe_pattern_config: dict
        + Init(): void
    }
}

package "Database Interface" {
    class DBInterfacing {
        - server: string
        - user: string
        - password: string
        + __init__(server, user, password)
        + initializeDB(): JIRA
        + generateDBQuery(ProjectName, Labels, Components): string
        + fetchDB(query, maxResults, path): list
        + updateDB(reference, PTMDT): dict
        + disconnectDB(): bool
    }
    
    class JIRA_InitFetchUpdate <<module>> {
        + initDB(server, user, password): JIRA
        + queryDB(jira, query, maxTickets): list
        + createTicketFolder(TicketNo, path): string
        + downloadAttachments(reference, path): list
        + frameFTMDT(references, path): list
        + fetchFTMDT(reference, query, max, path): list
        + UpdatePTMDT(reference, PTMDT): dict
    }
}

package "Ticket Processing" {
    class TicketFactory {
        - FTMDT: list
        + __init__(FTMDT)
        + pickTicket(index): list
    }
    
    class Ticket {
        - FTMD: list
        + __init__(FTMD)
        + ValidateTicketData(): list
        + validateTicketAttachments(paths): string
        + ManipulateTicketData(VTMD, path): list
    }
    
    class Manipulate_TicketData <<module>> {
        + getBuildVersion(SW_ID): string
        + getCustomerVersion(buildVersion): string
        + getPlatform(Relevence): string
        + getVariant(Relevence, Brand): string
        + getFaultDate(description): string
    }
}

package "Log Processing" {
    class Logs {
        - SW_ID_inJira: string
        - platform: string
        - attachmentPaths: list
        - TRC_Path: string
        - Components: list
        - tkt_folder_path: string
        + __init__(MTMD, folderPath)
        + getLogs(): list
        - checkforProOrBinInZipFiles(path): list
        - validateDirectPro(proList, SW_ID): list
        - decodeBin(binList, srcPath, destPath): list
        - renameFiles(fileList, suffix): list
        - createLOGSFolder(path): void
        - copyFiles(fileList, destPath): void
    }
}

package "Analysis Engine" {
    class Analyzer {
        - logList: list
        - faultOccDate: string
        - buildVersion: string
        - CustomerVersion: string
        - Component: string
        - commentParameters: dict
        + __init__(logList, faultDate, buildVer, custVer, component)
        + analyzeLogs(): list
        - analyzeLog(log): string
        - analyzeDownloadPipe(file): string
        - getMatchedCommentpatterns(log, handler): dict
        - getMatchedTracePatternsList(log, handler): list
        - frameLogResult(comments, components, traces): string
    }
    
    class PatternMatching <<module>> {
        + getLogHandler(path): file
        + getLogname(log): string
        + getSW_IDFromTraces(log, handler): string
        + getLogCollectedDate(log, handler, pattern, regex): string
        + getLogAvailabilityfromtoDate(log, handler): list
        + setLogAvstatusDuringFaultDate(handler, from, fault, to): string
        + getOverWrittenBlocks(handler): string
        + getMissingBlocks(handler): string
        + getSerialNo(log, handler, pattern): string
        + getPartNo(log, handler, pattern): string
    }
    
    class TracePatternMatching <<module>> {
        + matchTracePatterns(log, handler, patterns): list
        + extractLineNumbers(log, pattern): list
    }
    
    class HansyLink <<module>> {
        + createHansyLink(log): string
    }
}

package "Reporting" {
    class Dashboard_Updater {
        - PTMDT: list
        - METRICS: list
        - DashBoardDataHeader: list
        - DashBoardMetricsHeader: list
        + __init__(PTMDT, METRICS)
        + updateDataDashboard(): void
        + updateMetricsDashboard(): void
        - addFieldsToDataDashBoard(header_write): void
        - addFieldsToMetricsDashBoard(header_write): void
    }
    
    class BuildLogCreator {
        - ERROR_LOGS: list
        - date_of_build: string
        + __init__(ERROR_LOGS, date)
        + writeBuildLog(): void
    }
}

' Relationships
configSettings --> global_var: stores configs
DBInterfacing --> JIRA_InitFetchUpdate: uses
TicketFactory --> Ticket: creates
Ticket --> Manipulate_TicketData: uses
Analyzer --> PatternMatching: uses
Analyzer --> TracePatternMatching: uses
Analyzer --> HansyLink: uses

' Main relationships (dotted for high-level usage)
class EM_Analyzer_main <<main>> {
    + main(): void
}

EM_Analyzer_main ..> configSettings: uses
EM_Analyzer_main ..> DBInterfacing: uses
EM_Analyzer_main ..> TicketFactory: uses
EM_Analyzer_main ..> Logs: uses
EM_Analyzer_main ..> Analyzer: uses
EM_Analyzer_main ..> Dashboard_Updater: uses
EM_Analyzer_main ..> BuildLogCreator: uses

' Data structures
note right of TicketFactory
FTMDT Structure:
[TktNo, SW_ID, Relevance, Brand,
Attachments, Description, FolderPath,
Reference, Components]
end note

note right of Ticket
VTMD: Validated Ticket Metadata
MTMD: Manipulated Ticket Metadata
end note

note right of Logs
logList Structure:
[validLogs, invalidLogs, 
downloadPipeFiles]
end note

note right of Analyzer
Performs pattern-based
analysis using configured
patterns from JSON files
end note

@enduml
